--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="styles/CSS-Resets.css" type="text/css" rel="stylesheet"/>
-        <link href="styles/style.css" type="text/css" rel="stylesheet"/>
-        <title></title>
-    </head>
 
-    <body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="styles/CSS-Resets.css" type="text/css" rel="stylesheet" />
+  <link href="styles/style.css" type="text/css" rel="stylesheet" />
+  <link href="//db.onlinewebfonts.com/c/4fb2accf874593635afa99c122467fd6?family=MijaW03-Regular" rel="stylesheet"
+    type="text/css" />
+  <title>Smashing Magazine</title>
+</head>
 
-    </body>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Logo</a></li>
+        <li><a href="#">Articles</a></li>
+        <li><a href="#">Guides</a></li>
+        <li><a href="#">Books</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Membership</a></li>
+        <li><a href="#">More</a></li>
+        <li>
+          <form action="POST">
+            <input type="text" placeholder="Search articles...">
+          </form>
+        </li>
+      </ul>
+    </nav>
+  </header>
+</body>
+
 </html>
