Add classes to grid-container-1 items

--- a/index.html
+++ b/index.html
@@ -30,6 +30,36 @@
       </ul>
     </nav>
   </header>
+
+  <main>
+    <h2 class="first-heading">Some Heading</h2>
+
+    <div class="grid-container-1">
+        <div class="grid-item-1-1 grid-container-1-center">
+            <h3 class="headings">Heading</h3>
+            <h3 class="headings">Heading</h3>
+            <p class="texts">Some texts</p>
+        </div>
+
+        <div class="grid-item-1-2 grid-container-1-center"">
+            <h3 class="headings">Heading</h3>
+            <h3 class="headings">Heading</h3>
+            <p class="texts">Some texts</p>
+        </div>
+
+        <div class="grid-item-1-3 grid-container-1-center"">
+            <h3 class="headings">Heading</h3>
+            <h3 class="headings">Heading</h3>
+            <p class="texts">Some texts</p>
+        </div>
+
+        <div class="grid-item-1-4 grid-container-1-center"">
+            <h3 class="headings">Heading</h3>
+            <h3 class="headings">Heading</h3>
+            <p class="texts">Some texts</p>
+        </div>
+    </div>
+  </main>
 </body>
 
 </html>
