Add search icon for search bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="styles/CSS-Resets.css" type="text/css" rel="stylesheet" />
   <link href="styles/style.css" type="text/css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="//db.onlinewebfonts.com/c/4fb2accf874593635afa99c122467fd6?family=MijaW03-Regular" rel="stylesheet"
     type="text/css" />
   <title>Smashing Magazine</title>
@@ -24,6 +25,7 @@
         <li><a href="#">More</a></li>
         <li>
           <form action="POST">
+            <i class="material-icons search-icon">search</i>
             <input type="text" placeholder="Search articles...">
           </form>
         </li>
