Add articles sections and styles

--- a/index.html
+++ b/index.html
@@ -62,6 +62,40 @@
         </div>
     </div>
   </main>
+  <section class="sect2">
+    <div class="art1">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
+    </div>
+    <div class="art1">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
+    </div>
+    <div class="art1">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
+    </div>
+  </section>
+  <section class="sect3">
+    <div class="art1 grid2-1">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
+    </div>
+    <div class="art1 grid2-2">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
+    </div>
+  </section>
 </body>
 
 </html>
