Add comments for containers in index.html file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--Navbar container-->
   <header>
     <nav>
       <ul>
@@ -33,6 +34,7 @@
     </nav>
   </header>
 
+  <!--Main container-->
   <main>
     <h2 class="first-heading">Some Heading</h2>
 
@@ -62,6 +64,8 @@
         </div>
     </div>
   </main>
+
+  <!--Section 2 container-->
   <section class="sect2">
     <div class="art1">
       <p>4 DAYS AGO</p>
@@ -69,12 +73,14 @@
       <h2>By Carie Fisher</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
+
     <div class="art1">
       <p>4 DAYS AGO</p>
       <h1>Accessible images</h1>
       <h2>By Carie Fisher</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
+
     <div class="art1">
       <p>4 DAYS AGO</p>
       <h1>Accessible images</h1>
@@ -82,6 +88,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
   </section>
+
+  <!--Section 3 container-->
   <section class="sect3">
     <div class="art1 grid2-1">
       <p>4 DAYS AGO</p>
@@ -89,6 +97,7 @@
       <h2>By Carie Fisher</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
+
     <div class="art1 grid2-2">
       <p>4 DAYS AGO</p>
       <h1>Accessible images</h1>
@@ -96,6 +105,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
   </section>
-</body>
 
+
+</body>
 </html>
