--- a/index.html
+++ b/index.html
@@ -106,6 +106,35 @@
     </div>
   </section>
 
+  <!--Section 4 container-->
+  <section class="sect2">
+    <div class="art1 sect4">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
+        <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
+      </p>
+    </div>
+
+    <div class="art1 sect4">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
+          <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
+      </p>
+    </div>
+
+    <div class="art1 sect4">
+      <p>4 DAYS AGO</p>
+      <h1>Accessible images</h1>
+      <h2>By Carie Fisher</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
+          <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
+      </p>
+    </div>
+  </section>
 
 </body>
 </html>
