--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
       </p>
     </div>
   </section>
+  <section class="sect5">
+    <h1 class="headings">Now on smashing TV</h1>
+    <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
+      <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
+  </p>
+  <button>See all upcoming episodes</button> <br>
+  <span>Already have an account? <a href="#">Sign In</a></span>
+  </section>
 
 </body>
 </html>
