add see articles section

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
   <button>See all upcoming episodes</button> <br>
   <span>Already have an account? <a href="#">Sign In</a></span>
   </section>
-
+  <section class="see">
+    <span>SEE ALL THE LATEST ARTICLES</span>
+  </section>
 </body>
 </html>
