Add comments for section 5 and 6 containers

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
       </p>
     </div>
   </section>
+
+  <!--Section 5 container-->
   <section class="sect5">
     <h1 class="headings">Now on smashing TV</h1>
     <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
@@ -143,6 +145,8 @@
   <button>See all upcoming episodes</button> <br>
   <span>Already have an account? <a href="#">Sign In</a></span>
   </section>
+
+  <!--Section 6 container-->
   <section class="see">
     <span>SEE ALL THE LATEST ARTICLES</span>
   </section>
