Add section 7 container and its elements

--- a/index.html
+++ b/index.html
@@ -150,5 +150,15 @@
   <section class="see">
     <span>SEE ALL THE LATEST ARTICLES</span>
   </section>
+
+  <!--Section 7 container-->
+  <section class="sect7">
+      <small>Date</small>
+    <h1 class="headings">Heading</h1>
+    <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
+      <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
+  </p>
+  <button>A button</button> <br>
+  </section>
 </body>
 </html>
