Add class 'text' to small tag in section 7 container

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
   <!--Section 7 container-->
   <section class="sect7">
-      <small>Date</small>
+      <small class="texts">Date</small>
     <h1 class="headings">Heading</h1>
     <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
       <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
