Add section 8 container and its elements

--- a/index.html
+++ b/index.html
@@ -160,5 +160,20 @@
   </p>
   <button>A button</button> <br>
   </section>
+
+  <!--Section 8 container-->
+  <div class="sect8">
+      <div class="rotated-squares"></div>
+
+      <div class="sect8-flex-item-2">
+        <h5>Heading</h5>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus <br>
+             perferendis molestias adipisci hic est nobis quia quasi incidunt architecto sunt veritatis omnis sint iste. Lorem ipsum <br>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus <br>
+             perferendis molestias adipisci hic est nobis quia quasi incidunt architecto sunt veritatis omnis sint iste. Lorem ipsum
+        </p>
+      </div>
+  </div>
 </body>
 </html>
