style the smaller boxes

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <section class="sect9">
   <div class="first">
     <div class="sect8">
-      <div class="rotated-squares small-sq"></div>
+      <div class="small-sq"></div>
     
       <div class="sect8-flex-item-2">
         <h5>Heading</h5>
