Add section 11 container

--- a/index.html
+++ b/index.html
@@ -262,5 +262,50 @@
 gotchas and lessons learned.</p>
 <button>Jump to table of contents</button>
 </section>
+
+<!--Section 11 container-->
+<section class="sect11">
+    <div class="sect11-flex-item-1">
+      <small>4 DAYS AGO</small>
+      <h1>Accessible images</h1>
+      <ul>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+      </ul>  
+    </div>
+
+    <div class="sect11-flex-item-1">
+        <small>4 DAYS AGO</small>
+        <h1>Accessible images</h1>
+        <ul>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+        </ul>  
+      </div>
+
+      <div class="sect11-flex-item-1">
+        <small>4 DAYS AGO</small>
+        <h1>Accessible images</h1>
+        <ul>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+        </ul>  
+      </div>
+  </section>
 </body>
 </html>
