Add section 12 and section 13 containers and their elements

--- a/index.html
+++ b/index.html
@@ -307,5 +307,37 @@ gotchas and lessons learned.</p>
         </ul>  
       </div>
   </section>
+
+  <!--Section 12 container-->
+  <section class="sect12">
+    <div class="sect12-flex-item-1">
+        <small>4 DAYS AGO</small>
+        <h1>Accessible images</h1>
+        <ul>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+            <li><a href="">Link</a></li>
+        </ul>  
+      </div>
+
+      <div class="sect12-flex-item-2">
+        <small class="texts">Date</small>
+        <h1 class="headings">Heading</h1>
+        <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem <br>
+            numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>
+            quia quasi incidunt architecto sunt veritatis omnis sint iste.
+        </p>
+        <button>A button</button> <br>
+    </div>
+  </section>
+
+  <!--Section 13 container-->
+  <section class="see">
+    <span>MORE LINKS ON TWITTER</span>
+  </section>
 </body>
 </html>
