Add comments for all section containers

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       </div>
   </div>
 
+<!--Section 9 container-->
 <section class="sect9">
   <div class="first">
     <div class="sect8">
@@ -250,10 +251,13 @@
     </div>
   </div>
 </section>
+
+<!--Section 9.5 container-->
 <section class="see">
   <span>MORE LINKS ON TWITTER</span>
 </section>
-<!--Design systems section-->
+
+<!--Design systems section; Section 10 container-->
 <section class="sect10">
   <h2>FEATURE SMASHING BOOK</h2>
   <h1>Design Systems</h1>
