--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ gotchas and lessons learned.</p>
 
   <!--Section 13 container-->
   <section class="see">
-    <span>MORE LINKS ON TWITTER</span>
+    <span>SEE ALL ARTICLES</span>
   </section>
 </body>
 </html>
