add footer html elements

--- a/index.html
+++ b/index.html
@@ -343,5 +343,67 @@ gotchas and lessons learned.</p>
   <section class="see">
     <span>SEE ALL ARTICLES</span>
   </section>
+  <footer>
+    <div class="foot-top">
+      <h1>BROWSE ALL SMASHING MAGAZINE TOPICS</h1>
+      <ul>
+        <li><a href="">Accesibility</a></li>
+        <li><a href="">Android</a></li>
+        <li><a href="">Animation</a></li>
+        <li><a href="">Apps</a></li>
+        <li><a href="">CSS</a></li>
+        <li><a href="">Design</a></li>
+        <li><a href="">dESIGN Patterns</a></li>
+        <li><a href="">Design</a></li>
+        <li><a href="">dESIGN Patterns</a></li>
+      </ul>  
+      <ul>
+          <li><a href="">Accesibility</a></li>
+          <li><a href="">Android</a></li>
+          <li><a href="">Animation</a></li>
+          <li><a href="">Apps</a></li>
+          <li><a href="">CSS</a></li>
+          <li><a href="">Design</a></li>
+          <li><a href="">dESIGN Patterns</a></li>
+          <li><a href="">Design</a></li>
+      </ul>  
+      <ul>
+        <li><a href="">Accesibility</a></li>
+        <li><a href="">Android</a></li>
+        <li><a href="">Animation</a></li>
+        <li><a href="">Apps</a></li>
+        <li><a href="">CSS</a></li>
+        <li><a href="">Design</a></li>
+        <li><a href="">dESIGN Patterns</a></li>
+        <li><a href="">Design</a></li>
+    </ul>
+    <ul>
+      <li><a href="">Accesibility</a></li>
+      <li><a href="">Android</a></li>
+      <li><a href="">Animation</a></li>
+    </ul>
+    </div>
+    <div class="foot-bottom">
+      <p>With a commitment to quality content for the design community</p>
+      <h2>Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.<br>
+
+        Smashing is proudly running on <a href="#">Netlify</a>.<br>
+        
+        Fonts by <a href="#">Latinotype</a>.</h2>
+    </div>
+    <div class="final-foot">
+      <ul>
+        <li><a href="">Write for us</a></li>
+        <li><a href="">Contact Us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">Privacy Policy</a></li>
+      </ul>
+      <ul>
+        <li><a href="">Membership</a></li>
+        <li><a href="">Delivery Times</a></li>
+        <li><a href="">Advertise</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
