Add comment for footer container

--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@ gotchas and lessons learned.</p>
   <section class="see">
     <span>SEE ALL ARTICLES</span>
   </section>
+
+  <!--Footer container-->
   <footer>
     <div class="foot-top">
       <h1>BROWSE ALL SMASHING MAGAZINE TOPICS</h1>
