--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <p class="texts">Some texts</p>
         </div>
 
-        <div class="grid-item-1-2 grid-container-1-center"">
+        <div class="grid-item-1-2 grid-container-1-center">
             <h3 class="headings">Heading</h3>
             <h3 class="headings">Heading</h3>
             <p class="texts">Some texts</p>
         </div>
 
-        <div class="grid-item-1-3 grid-container-1-center"">
+        <div class="grid-item-1-3 grid-container-1-center">
             <h3 class="headings">Heading</h3>
             <h3 class="headings">Heading</h3>
             <p class="texts">Some texts</p>
         </div>
 
-        <div class="grid-item-1-4 grid-container-1-center"">
+        <div class="grid-item-1-4 grid-container-1-center">
             <h3 class="headings">Heading</h3>
             <h3 class="headings">Heading</h3>
             <p class="texts">Some texts</p>
@@ -69,22 +69,22 @@
   <section class="sect2">
     <div class="art1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
 
     <div class="art1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
 
     <div class="art1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
   </section>
@@ -93,14 +93,14 @@
   <section class="sect3">
     <div class="art1 grid2-1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
 
     <div class="art1 grid2-2">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
+      <h2>Accessible images</h2>
       <h2>By Carie Fisher</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </div>
@@ -108,28 +108,28 @@
 
   <!--Section 4 container-->
   <section class="sect2">
-    <div class="art1 sect4">
+    <div class="art1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
         <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
       </p>
     </div>
 
-    <div class="art1 sect4">
+    <div class="art1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
           <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
       </p>
     </div>
 
-    <div class="art1 sect4">
+    <div class="art1">
       <p>4 DAYS AGO</p>
-      <h1>Accessible images</h1>
-      <h2>By Carie Fisher</h2>
+      <h2>Accessible images</h2>
+      <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
           <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
       </p>
@@ -138,7 +138,7 @@
 
   <!--Section 5 container-->
   <section class="sect5">
-    <h1 class="headings">Now on smashing TV</h1>
+    <h2 class="headings">Now on smashing TV</h2>
     <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
       <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
   </p>
@@ -147,14 +147,14 @@
   </section>
 
   <!--Section 6 container-->
-  <section class="see">
+  <div class="see">
     <span>SEE ALL THE LATEST ARTICLES</span>
-  </section>
+  </div>
 
   <!--Section 7 container-->
   <section class="sect7">
-      <small class="texts">Date</small>
-    <h1 class="headings">Heading</h1>
+    <small class="texts">Date</small>
+    <h2 class="headings">Heading</h2>
     <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
       <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
   </p>
@@ -253,14 +253,14 @@
 </section>
 
 <!--Section 9.5 container-->
-<section class="see">
+<div class="see">
   <span>MORE LINKS ON TWITTER</span>
-</section>
+</div>
 
 <!--Design systems section; Section 10 container-->
 <section class="sect10">
-  <h2>FEATURE SMASHING BOOK</h2>
-  <h1>Design Systems</h1>
+  <h3>FEATURE SMASHING BOOK</h3>
+  <h2>Design Systems</h2>
   <p>Meet <strong>Design Systems</strong>, a recent book in which All Kholmatova explores how to <br>
   set up and <strong>effective design system</strong> to create digital products. With common traps, <br>
 gotchas and lessons learned.</p>
@@ -271,7 +271,7 @@ gotchas and lessons learned.</p>
 <section class="sect11">
     <div class="sect11-flex-item-1">
       <small>4 DAYS AGO</small>
-      <h1>Accessible images</h1>
+      <h2>Accessible images</h2>
       <ul>
           <li><a href="">Link</a></li>
           <li><a href="">Link</a></li>
@@ -285,7 +285,7 @@ gotchas and lessons learned.</p>
 
     <div class="sect11-flex-item-1">
         <small>4 DAYS AGO</small>
-        <h1>Accessible images</h1>
+        <h2>Accessible images</h2>
         <ul>
             <li><a href="">Link</a></li>
             <li><a href="">Link</a></li>
@@ -299,7 +299,7 @@ gotchas and lessons learned.</p>
 
       <div class="sect11-flex-item-1">
         <small>4 DAYS AGO</small>
-        <h1>Accessible images</h1>
+        <h2>Accessible images</h2>
         <ul>
             <li><a href="">Link</a></li>
             <li><a href="">Link</a></li>
@@ -316,7 +316,7 @@ gotchas and lessons learned.</p>
   <section class="sect12">
     <div class="sect12-flex-item-1">
         <small>4 DAYS AGO</small>
-        <h1>Accessible images</h1>
+        <h2>Accessible images</h2>
         <ul>
             <li><a href="">Link</a></li>
             <li><a href="">Link</a></li>
@@ -330,7 +330,7 @@ gotchas and lessons learned.</p>
 
       <div class="sect12-flex-item-2">
         <small class="texts">Date</small>
-        <h1 class="headings">Heading</h1>
+        <h2 class="headings">Heading</h2>
         <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem <br>
             numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>
             quia quasi incidunt architecto sunt veritatis omnis sint iste.
@@ -340,9 +340,9 @@ gotchas and lessons learned.</p>
   </section>
 
   <!--Section 13 container-->
-  <section class="see">
+  <div class="see">
     <span>SEE ALL ARTICLES</span>
-  </section>
+  </div>
 
   <!--Footer container-->
   <footer>
