add final touches

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!--Main container-->
   <main>
-    <h2 class="first-heading">Some Heading</h2>
+    <h2 class="first-heading">Don't miss the latest articles</h2>
 
     <div class="grid-container-1">
         <div class="grid-item-1-1 grid-container-1-center">
