Fix html validator errors

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </main>
 
   <!--Section 2 container-->
-  <section class="sect2">
+  <div class="sect2">
     <article class="art1">
       <p>4 DAYS AGO</p>
       <h2>Accessible images</h2>
@@ -84,10 +84,10 @@
       <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </article>
-  </section>
+  </div>
 
   <!--Section 3 container-->
-  <section class="sect3">
+  <div class="sect3">
     <article class="art1 grid2-1">
       <p>4 DAYS AGO</p>
       <h2>Accessible images</h2>
@@ -101,10 +101,10 @@
       <h2>By Carie Fisher</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </article>
-  </section>
+  </div>
 
   <!--Section 4 container-->
-  <section class="sect2">
+  <div class="sect2">
     <article class="art1">
       <p>4 DAYS AGO</p>
       <h2>Accessible images</h2>
@@ -125,17 +125,17 @@
       <h3>By Carie Fisher</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.</p>
     </article>
-  </section>
+  </div>
 
   <!--Section 5 container-->
-  <section class="sect5">
+  <div class="sect5">
     <h2 class="headings">Now on smashing TV</h2>
     <p class="texts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus perferendis molestias adipisci hic est nobis 
       <br>quia quasi incidunt architecto sunt veritatis omnis sint iste.
   </p>
   <button>See all upcoming episodes</button> <br>
   <span>Already have an account? <a href="#">Sign In</a></span>
-  </section>
+  </div>
 
   <!--Section 6 container-->
   <div class="see">
@@ -164,11 +164,10 @@
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, exercitationem numquam explicabo laudantium ut possimus <br>
              perferendis molestias adipisci hic est nobis quia quasi incidunt architecto sunt veritatis omnis sint iste. Lorem ipsum
         </article>
-      </div>
   </div>
 
 <!--Section 9 container-->
-<section class="sect9">
+<div class="sect9">
   <div class="first">
     <div class="sect8">
       <div class="small-sq"></div>
@@ -241,7 +240,7 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 
 <!--Section 9.5 container-->
 <div class="see">
